# rethinking-2

./: 01-The-Golem-of-Prague.ipynb  02-Large-and-Small-Worlds.ipynb  03-Sampling-the-Imaginary.ipynb  04-Geocentric-Models.ipynb  README.md  pyproject.toml
