[tool.poetry]
name = "rethinking"
version = "0.1.0"
description = ""
authors = ["Marcin Elantkowski <marcin.elantkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mcx = {git = "https://github.com/rlouf/mcx", rev = "compiler-refactor"}
pymc3 = "*"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
ipykernel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
